@@ -1,28 +1,9 @@
-# Competitions-Tracking-Software
-A team at KFUPM News is assigned to keep track of the undergraduate students participating in external CTFs and Hackathons. They keep track of the name, the website, the date of a competition. For each competition they maintain a list of the KFUPM students participating. The student information they keep track of is the student ID, name, major, his ranking in the competition and if the competition is team based, the team internal number, and the team’s name in the competition.
-Right now, they keep track of those competitions using an excel file, a sample of this file is attached, contains the information of the competition, and the student participating.
-As the number of competitions and student participating increases, their system started taking longer than what it used to take, and they fell behind updating the winners and congratulate them.
+# To run the program successfully, you should do the following before running:
+1- make sure that you have added JavaFx and Apache POI libraries.(from this link you can add Apache library: https://www.youtube.com/watch?v=w757wjTiruU&ab_channel=LearnAutomationStepByStep).
 
-To boost the News team productivity and simplify their work, they recruited your team to build them a java application allows them to do the following:
+2- you have to write three lines below on VM arguments:
+	--module-path {your path of javafx-sdk} --add-modules javafx.controls
+	--add-modules=javafx.web
+	-Dcom.sun.webkit.useHTTP2Loader=false
 
-   • a user interface that shows all competitions.
-   
-   • the ability to track a new competition.
-   
-   • a page for each competition that shows the students/team participating in that competition.
-   
-   • browse the website of the competition within your application.
-   
-   • add a team/a student to a competition.
-   
-   • if a competition is duo and the News team didn't update the winners, the application shows a notification once its open.
-   
-   • Open the default email app and prepare a message to send to a student:
-   
-       o To: the email of the student / students in case it was a team competition. Following KFUPM the email for each student is “s[student ID]@kfupm.edu.sa”.
-       
-       o Subject: Congratulation on achieving [their ranking] place in [the competition name]
-       
-       o The body of the message is attached as a text file.
-       
-   • Keep updating their excel file as they are using it for data illustration.
+3- you have a file has this name: "Email Body template.txt" and excel file has this name: "malaf.xlsx" on the same directory path of the project.
